@@ -176,6 +176,7 @@ Unicorn.lockdown(self,
   :user=>#{user.inspect},
   :pledge=>'rpath prot_exec inet unix', # More may be needed
   :master_pledge=>'rpath cpath wpath inet proc exec', # More may be needed
+  :master_execpledge=>'stdio rpath prot_exec inet unix cpath wpath getpw chown unveil', # More may be needed
   :email=>'root', # update this with correct email
   #{":unveil=>{\n    'views'=>'r'\n  },\n  :dev_unveil=>{}," if unveil}
 )
