@@ -1,6 +1,8 @@
 = master
 
-* Add :master_pledge option to Unicorn lockdown, for pledging the master process (jeremyevans)
+* Add :master_execpledge option to Unicorn.lockdown, for initial pledge of worker processes (jeremyevans)
+
+* Add :master_pledge option to Unicorn.lockdown, for pledging the master process (jeremyevans)
 
 * Add unicorn-lockdown-add -U, for setting up an application designed for unveil instead of chroot (jeremyevans)
 
